# comparch_labs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  lab3.md  lab4.md  lab5-final.md  settings.mk
asm/: Makefile  convert.py  create_gpu_buffer.py
asm/asm_backup/: Makefile  powerOf2.text.hex
python/: convert.py
rust/: counter.vcd
rust/backend/: counter.vcd
rust/backend/verilated/: build.rs
rust/backend/verilator/src/: gen.rs
rust/cpu_backend/: Cargo.toml  build.rs
rust/cpu_backend/src/: main.rs
rust/cpu_backend/src/modules/: README.md  mod.rs  noTop.rs
rust/cpu_backend/src/modules/top/: mod.rs
rust/frontend/: Cargo.toml
rust/frontend/src/: app.rs  main.rs
rust/frontend/static/: data.json
verilog/: Makefile  progmem.mem  run
verilog/cpus/: Makefile
verilog/cpus/fake_cpu/: README.md  fake_cpu.t.v  fake_cpu.v  fake_cpu.vvp
verilog/cpus/gpu/: gpu.t.v  gpu.v
verilog/cpus/rustcpu/: singlecycle_cpu.v
verilog/cpus/single_cycle/: single_cycle.v  single_cycle.vvp
verilog/modules/alu/: alu.t.v  alu.v
verilog/modules/counter/: counter.v
verilog/modules/fsm/: fsm.v  fsmdefs.v
verilog/modules/memory/: memory.v
verilog/modules/pc/: pc.v
verilog/modules/regfile/: regfile.v
verilog/modules/regfile/regfilemodules/: register.v
verilog/modules/signextend/: signextend.v
verilog/modules/simd_core/: core.t.v  core.v  operandAs.mem  out
