[package]
name = "frontend"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
failure = "0.1"

yew = {git="https://github.com/yewstack/yew/", features=["toml"]}
stdweb = "0.4.20"